second solution. List.of for the win!